--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                            <img src="img.jpg">
                    </div>
                    <h2>Kate Kruszeski</h2>
-                   <h3><br><span>Frontend Web Developer | Technical Project Manager | Mobile App Developer</span></h3>
+                   <h3><br><span> Frontend Developer | Software Engineer | Web Developer </span></h3>
            </div>
 
             <div class="contactInfo">
@@ -33,7 +33,7 @@
                    </li> 
                    <li>
                         <span class="icon"><i class="fa fa-envelope" aria-hidden="true"></i></span>
-                        <span class="text"> kate.kw8@gmail.com</span>
+                        <span class="text"> katekw.1991@gmail.com </span>
                    </li> 
                    <li>
                         <span class="icon"><i class="fa fa-map-marker" aria-hidden="true"></i></span>
@@ -41,7 +41,7 @@
                    </li> 
                    <li>
                         <a class="cv-social-icon" href="https://www.linkedin.com/in/kate-kruszeski/"><i class="fa fa-linkedin-square" aria-hidden="true"></i> </a>
-                        <a  href="https://www.linkedin.com/in/kate-kruszeski/"><span class="text">LinkedIn</span></a>
+                        <a  href="https://www.linkedin.com/in/kate-krusz/"><span class="text">LinkedIn</span></a>
                    </li> 
                     <li>
                         <a class="cv-social-icon" href="https://katevackercoder.github.io/Portfolio/"><i class="fa fa-globe" aria-hidden="true"></i></a>
@@ -62,11 +62,11 @@
                          <h5>Bangkok University International</h5>
                         </li> 
 
-                        <li>
+                      <!--  <li>
                          <h6>2022 - 2023</h6>
                          <h5>Technical Project Management Certificate</h5> 
                          <h5>Thinkful</h5>
-                        </li> 
+                        </li> -->
 
                         <li>
                          <h6>2023</h6>
@@ -90,7 +90,7 @@
                                    <h5>HTML5/CSS3, JavaScript, Bootstrap, API,  React, React Native, Redux, Python, Swift, Kotlin, Java, C#, SQL, Flutter, Microsoft-based applications, Database Management</h5> 
                                   </li> 
 
-                                  <li>
+                            <!--      <li>
                                    <h6>Project Management</h6>
                                    <h5>Stakeholder management, Project documentation, Estimating and Budgeting, Managing Sponsor Concerns, System Development, Life Cycle, Project Life Cycle, Automation Tools</h5> 
                                   </li> 
@@ -98,7 +98,7 @@
                                   <li>
                                    <h6>Management</h6>
                                    <h5>Agile methodologies, Predictive methodologies, Jira, Scrum workflow, Slack, Trello</h5> 
-                                  </li> 
+                                  </li> -->
 
                           </ul> 
                       </div>
@@ -141,13 +141,34 @@
           <div class="right_Side">
          <div class="about">
             <h2 class="title2">Experience</h2>
+                 <div class="box">
+                             <div class="year_company">
+                             <h5>DEC2023 - Present</h5>
+                              <h5>LaunchCode</h5>
+                     </div>
+                      <div class="text">
+                              <h4>Web Development Instructional Assistant</h4>
+                              <h5> 
+                                      <ul>
+                                      <li>Offer guidance and support to students, fostering a collaborative learning environment responses via various communication channels such as Discord, Email, Trello and Slack</li>
+                                      <li>Facilitated one-on-one and group sessions to address coding challenges, clarify concepts, and promote student success </li>
+                                      <li>Utilized HTML, CSS and JavaScript to build the Website and teach students best practices in coding</li>
+                                      <li> Introduce and demonstrate the practical application of the Studio Activity; reinforce concepts</li>
+                                      <li>Prepare supplemental exercises, practice tools, or activities for learners when there is no studio assignment</li>
+                                      <li>Make sure learner documentation is up to date by accurate recording of attendance, graded assignments etc.</li>                 
+                                      <li>Engaging in workshops on key web development topics, contributing to the professional development of students. Covered relevant tools, technologies, and best practices to equip learners with practical skills for the tech industry</li>
+                                      </ul> 
+                              </h5>
+                      </div>
+                     </div>
+                 
             <div class="box">
                     <div class="year_company">
                     <h5>MAY2023 - OCT2023</h5>
                      <h5>Freecodecamp</h5>
             </div>
              <div class="text">
-                     <h4>Front-End Web Developer Trainee</h4>
+                     <h4>Front-End Web Developer</h4>
                      <h5> 
                              <ul>
                              <li>Create responsive and interactive web interfaces using HTML, CSS, and JavaScript </li>
@@ -162,7 +183,7 @@
              </div>
             </div>
 
-                 <div class="box">
+   <!--              <div class="box">
                              <div class="year_company">
                               <h5>DEC2022 – MAY2023</h5>
                               <h5>Thinkful</h5>
@@ -256,11 +277,13 @@
 
                           </h5>
                   </div>
-                 </div>
+                 </div>          
+
+                    -->
 
                  <div class="box">
                           <div class="year_company">
-                           <h5>FEB2014 – DEC2014</h5>
+                           <h5>FEB2014 – DEC2018</h5>
                            <h5>Chevron Thailand Exploration and Production LTD.</h5>
                   </div>
                    <div class="text">
@@ -281,7 +304,7 @@
                    </div>
                   </div>
 
-                 <div class="box">
+      <!--          <div class="box">
                            <div class="year_company">
                             <h5>APR2012 – MAY2013</h5>
                             <h5>JL STARNET TRADE CO., LTD</h5>
@@ -302,7 +325,7 @@
 
                             </h5>
                     </div>
-                   </div>
+                   </div>    -->
          </div>
           </div>
   </div>
